backend/src/Edge/Envoy/envoy-azure.yaml
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            edge_listener:
              connection_limit: 3000
      overload:
        global_downstream_max_connections: 5000    

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/c/"
                route:
                  auto_host_rewrite: true
                  cluster: command_cluster
              - match:
                  prefix: "/api/q/"
                route:
                  auto_host_rewrite: true
                  cluster: query_cluster
              - match:
                  prefix: "/api/s/"
                route:
                  auto_host_rewrite: true
                  cluster: commandstatus_cluster
              - match:
                  prefix: "/"
                route:
                  auto_host_rewrite: true
                  cluster: front_cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: command_cluster
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: command_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: command
                port_value: 80
  - name: query_cluster
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: query_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: query
                port_value: 80
  - name: commandstatus_cluster
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: commandstatus_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: commandstatus
                port_value: 80
  - name: front_cluster
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: front_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: front
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
