backend/src/Edge/Envoy/envoy-local.yaml
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            edge_listener:
              connection_limit: 3000
      overload:
        global_downstream_max_connections: 5000    

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      name: 'edge_listener'
      listener_filters:
      - name: "tls_inspector"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      per_connection_buffer_limit_bytes: 32768  # 32 KiB
      filter_chains:
        # filter chain for web socket / https redirection
        - filter_chain_match:
            transport_protocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                upgrade_configs:
                - upgrade_type: websocket
                route_config:
                  name: local_redirect
                  virtual_hosts:
                  - name: local_http
                    domains: ["*"]
                    routes:
                    - name: "query_ws"
                      match:
                        prefix: "/app"
                      route:
                        auto_host_rewrite: true
                        cluster: auctionhouse_query
                    - name: catch_all
                      match: { prefix: "/" }
                      redirect: { https_redirect: true }
                http_filters:
                - name: envoy.filters.http.router
        # main filter chain handling routing
        - filter_chain_match:
            transport_protocol: tls
          filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_https
                codec_type: auto
                use_remote_address: true
                normalize_path: true
                merge_slashes: true
                path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
                common_http_protocol_options:
                  idle_timeout: 3600s  # 1 hour
                  headers_with_underscores_action: REJECT_REQUEST
                http2_protocol_options:
                  max_concurrent_streams: 100
                  initial_stream_window_size: 65536  # 64 KiB
                  initial_connection_window_size: 1048576  # 1 MiB
                stream_idle_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
                request_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
                route_config:
                  name: auctionhouse_backend_route
                  virtual_hosts:
                  - name: auctionhouse_backend
                    domains:
                    - "*"
                    routes:
                    - name: "command"
                      match:
                        prefix: "/api/c/"
                      route:
                        auto_host_rewrite: true
                        cluster: auctionhouse_command
                    - name: "query"
                      match:
                        prefix: "/api/q/"
                      route:
                        auto_host_rewrite: true
                        cluster: auctionhouse_query
                        retry_policy:
                          retry_on: 5xx
                    - name: "query_ws"
                      match:
                        prefix: "/app/"
                      route:
                        auto_host_rewrite: true
                        cluster: auctionhouse_query
                    - name: "commandstatus"
                      match:
                        prefix: "/api/s/"
                      route:
                        auto_host_rewrite: true
                        cluster: auctionhouse_commandstatus
                    - name: "front"
                      match:
                        prefix: "/"
                      route:
                        auto_host_rewrite: true
                        cluster: front
                http_filters:
                - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
              common_tls_context:
                tls_certificates:
                - certificate_chain:
                    filename: "/etc/ssl/chain.txt"
                  private_key:
                    filename: "/etc/ssl/private.txt"
                alpn_protocols: ["h2,http/1.1"]
  clusters:
  - name: auctionhouse_command
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auctionhouse_command
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:           
                  socket_address:
                    address: host.docker.internal
                    port_value: 5203
  - name: auctionhouse_query
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auctionhouse_query
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:           
                  socket_address:
                    address: host.docker.internal
                    port_value: 5070
  - name: auctionhouse_commandstatus
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auctionhouse_commandstatus
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:           
                  socket_address:
                    address: host.docker.internal
                    port_value: 5263
  - name: front
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: front
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:           
                  socket_address:
                    address: front
                    port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"

overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
  - name: "envoy.resource_monitors.fixed_heap"
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
      max_heap_size_bytes: 2147483648  # 2 GiB
  actions:
  - name: "envoy.overload_actions.shrink_heap"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.95
  - name: "envoy.overload_actions.stop_accepting_requests"
    triggers:
    - name: "envoy.resource_monitors.fixed_heap"
      threshold:
        value: 0.98
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
